--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -6,6 +6,7 @@
 * {
 	margin: 0;
 	padding: 0;
+	line-height: 1.307;
 }
 html, body {
 	font-family: 'IBM Plex Sans Condensed', sans-serif;
@@ -67,10 +68,10 @@ code {
 
 noscript {
 	font-style: italic;
-  border: 1px solid red;
-  display: inline-block;
-  padding: .5em;
-  margin: .5em;
+ 	border: 1px solid red;
+ 	display: inline-block;
+ 	padding: .5em;
+ 	margin: .5em;
 }
 
 blockquote {
